# python-meteor-test

./: Dockerfile  README.md  main.py  pyproject.toml  requirements.txt  requirements.tzt  setup.py
static/: style.css
templates/: index.html
